@@ -3,6 +3,7 @@
      - fixed depracted hash handling
      - improved error handling in SMB backend
      - fixed Mac finder related bug with '&' in a pathname (thanx Florian Freund <mail@floek.net>)
+     - fixed speedy bug
 
 0.8.1: 2011/7/11
      - Web interface:
